unpackaged/main/default/objects/Commission__c/fields/Account_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_c__c</fullName>
    <formula>Opportunity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>