unpackaged/main/default/objects/Commission__c/fields/Appointment_Success_Fee__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Success_Fee__c</fullName>
    <formula>(Opportunity__r.Amount -  Structural_Electrical_Upgrade_Adder__c  )* Opportunity__r.Palmetto_Digital_Appointment_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Success Fee (Adder)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>