unpackaged/main/default/objects/Commission__c/fields/APR__c.field-meta.xml
<CustomField>
    <fullName>APR__c</fullName>
    <formula>TEXT( Opportunity__r.APR__c )</formula>
    <label>APR</label>
    <type>Text</type>
</CustomField>