unpackaged/main/default/objects/Commission__c/fields/Balance_Due_Commissions__c.field-meta.xml
<CustomField>
    <fullName>Balance_Due_Commissions__c</fullName>
    <formula>CASE( Lead_Source_Type__c , 
"Independent", IA_Total_Commissions_Value__c,Total_Commissions__c)

- Total_Commissions_Paid_To_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commissions Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>