unpackaged/main/default/objects/Commission__c/fields/Battery_Adder__c.field-meta.xml
<CustomField>
    <fullName>Battery_Adder__c</fullName>
    <formula>IF( Opportunity__r.Battery_Qty__c &gt; 1, 10500, 12995) * Opportunity__r.Battery_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Battery Adder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>