unpackaged/main/default/objects/Commission__c/fields/Battery_Adder_Value__c.field-meta.xml
<CustomField>
    <fullName>Battery_Adder_Value__c</fullName>
    <label>Battery Adder Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>