unpackaged/main/default/objects/Commission__c/fields/Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date__c</fullName>
    <formula>Opportunity__r.Cancellation_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>