unpackaged/main/default/objects/Commission__c/fields/Cancellation_Fee_Potential__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Fee_Potential__c</fullName>
    <formula>IF(   ISBLANK(Opportunity__r.Permit_Rec_d_Date__c) = False, 750 +  Opportunity__r.Permit_Amount__c + Opportunity__r.Business_License_Fee__c , 

IF( ISBLANK(Opportunity__r.Engineering_Complete_Date__c) = FALSE, 750,

250)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancellation Fee (Potential)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>