unpackaged/main/default/objects/Commission__c/fields/Canvass_Appointment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Canvass_Appointment_Amount__c</fullName>
    <formula>CASE( Lead_Source__c , "Canvassing",  Commission_Plan__r.Canvass_Appointment_Rate__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canvass Appointment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>