unpackaged/main/default/objects/Commission__c/fields/Canvass_Appointment_Paid__c.field-meta.xml
<CustomField>
    <fullName>Canvass_Appointment_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Canvass Appointment Paid</label>
    <type>Checkbox</type>
</CustomField>