unpackaged/main/default/objects/Commission__c/fields/Canvass_Install_Complete_Paid__c.field-meta.xml
<CustomField>
    <fullName>Canvass_Install_Complete_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Canvass Install Complete Paid</label>
    <type>Checkbox</type>
</CustomField>