unpackaged/main/default/objects/Commission__c/fields/Clawback_Amount_Actual__c.field-meta.xml
<CustomField>
    <fullName>Clawback_Amount_Actual__c</fullName>
    <label>Clawback Amount (Actual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>