unpackaged/main/default/objects/Commission__c/fields/Commission_Adjustment_acct__c.field-meta.xml
<CustomField>
    <fullName>Commission_Adjustment_acct__c</fullName>
    <formula>IF(OR(AND(M3__c&lt;&gt;0,Milestone_3_Paid__c=True),AND(M3__c=0,Milestone_2_Paid__c=True)),-Balance_Due_Commissions__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>