unpackaged/main/default/objects/Commission__c/fields/Commission_Plan__c.field-meta.xml
<CustomField>
    <fullName>Commission_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commission Plan</label>
    <referenceTo>Commission_Plan__c</referenceTo>
    <relationshipName>Commisions</relationshipName>
    <type>Lookup</type>
</CustomField>