unpackaged/main/default/objects/Commission__c/fields/CommissionPct__c.field-meta.xml
<CustomField>
    <fullName>CommissionPct__c</fullName>
    <formula>Total_Commissions__c /  (Opportunity_Amount__c +  Downpayment__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>