unpackaged/main/default/objects/Commission__c/fields/Commissions_Payable_Value__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Payable_Value__c</fullName>
    <label>Commissions Payable Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>