unpackaged/main/default/objects/Commission__c/fields/Commissions_Watt__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Watt__c</fullName>
    <formula>Total_Commissions__c / System_Size_DC__c / 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$Commissions / Watt</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>