unpackaged/main/default/objects/Commission__c/fields/Conduit_In_Attic_Adder__c.field-meta.xml
<CustomField>
    <fullName>Conduit_In_Attic_Adder__c</fullName>
    <formula>If(  Conduit_Run_Through_Attic__c = True, 100 *  Opportunity__r.Number_of_Arrays__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conduit In Attic Adder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>