unpackaged/main/default/objects/Commission__c/fields/Conduit_Run_Through_Attic__c.field-meta.xml
<CustomField>
    <fullName>Conduit_Run_Through_Attic__c</fullName>
    <formula>Opportunity__r.Conduit_Run_Through_Attic__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conduit Run Through Attic</label>
    <type>Checkbox</type>
</CustomField>