unpackaged/main/default/objects/Commission__c/fields/Contract_Received_Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Received_Confirmed_Date__c</fullName>
    <formula>Opportunity__r.Contract_Received_Confirmed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Received Confirmed Date</label>
    <type>Date</type>
</CustomField>