unpackaged/main/default/objects/Commission__c/fields/CP_Base_5kW_Program__c.field-meta.xml
<CustomField>
    <fullName>CP_Base_5kW_Program__c</fullName>
    <formula>IF( Commission_Plan__r.Base_6kW__c = 0,

     IF( Opportunity__r.System_Size_Calculated_kW__c &lt; 5,    
     Commission_Plan__r.X5K__c   *  Opportunity__r.System_Size_Calculated_kW__c, 
     Commission_Plan__r.X5kW__c    *  Opportunity__r.System_Size_Calculated_kW__c),

0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP Base - 5kW Program</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>