unpackaged/main/default/objects/Commission__c/fields/CP_Base_5kW_Program_Value__c.field-meta.xml
<CustomField>
    <fullName>CP_Base_5kW_Program_Value__c</fullName>
    <label>CP Base - 5kW Program Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>