unpackaged/main/default/objects/Commission__c/fields/CP_Base_6kW_Program__c.field-meta.xml
<CustomField>
    <fullName>CP_Base_6kW_Program__c</fullName>
    <formula>IF( Commission_Plan__r.X5kW__c = 0,
    
     IF( Commission_Plan__r.X9kW__c = 0,
     

     IF( Opportunity__r.System_Size_Calculated_kW__c &gt;= 6,  
     Commission_Plan__r.Base_6kW__c *  Opportunity__r.System_Size_Calculated_kW__c,
     Commission_Plan__r.X6kW__c  *  Opportunity__r.System_Size_Calculated_kW__c), 
     
     IF(Opportunity__r.System_Size_Calculated_kW__c &gt; 9,  
          Commission_Plan__r.X9kW__c *  Opportunity__r.System_Size_Calculated_kW__c,
          IF(Opportunity__r.System_Size_Calculated_kW__c &lt; 6,
           Commission_Plan__r.X6kW__c  *  Opportunity__r.System_Size_Calculated_kW__c,
           Commission_Plan__r.Base_6kW__c *  Opportunity__r.System_Size_Calculated_kW__c)
           )
     ),

     0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP Base - 6kW Program</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>