unpackaged/main/default/objects/Commission__c/fields/CP_Base__c.field-meta.xml
<CustomField>
    <fullName>CP_Base__c</fullName>
    <formula>CP_Base_5kW_Program_Value__c + CP_Base_6kW_Program_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP Base</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>