unpackaged/main/default/objects/Commission__c/fields/CP_Base_Watt__c.field-meta.xml
<CustomField>
    <fullName>CP_Base_Watt__c</fullName>
    <formula>CP_Base__c / 	System_Size_DC__c / 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$CP Base / Watt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>