unpackaged/main/default/objects/Commission__c/fields/CP_Milestone_1_Value__c.field-meta.xml
<CustomField>
    <fullName>CP_Milestone_1_Value__c</fullName>
    <label>CP Milestone 1 Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>