unpackaged/main/default/objects/Commission__c/fields/CP_Panel_Type_Adder_Value__c.field-meta.xml
<CustomField>
    <fullName>CP_Panel_Type_Adder_Value__c</fullName>
    <label>CP Panel Type Adder Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>