unpackaged/main/default/objects/Commission__c/fields/CT_GreenBank_Adder__c.field-meta.xml
<CustomField>
    <fullName>CT_GreenBank_Adder__c</fullName>
    <formula>CASE( Opportunity__r.Location__c , "Connecticut",  

 IF( OR(Installation_Complete_Date__c &gt; Date(2019,10,01),ISBLANK(Installation_Complete_Date__c) = True),

Opportunity__r.Proposed_Incentive_Amount__c,0)  

, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CT GreenBank Incentive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>