unpackaged/main/default/objects/Commission__c/fields/CT_GreenBank_AdderValue__c.field-meta.xml
<CustomField>
    <fullName>CT_GreenBank_AdderValue__c</fullName>
    <label>CT GreenBank Incentive Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>