unpackaged/main/default/objects/Commission__c/fields/Dealer_Fee_amount_for_Adder__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Fee_amount_for_Adder__c</fullName>
    <label>Dealer Fee amount for Upgrade</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>