unpackaged/main/default/objects/Commission__c/fields/Dealer_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Fee_Percent__c</fullName>
    <formula>Dealer_Fees__c / Opportunity_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Fee %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>