unpackaged/main/default/objects/Commission__c/fields/Dealer_Fee_Price_Match__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Fee_Price_Match__c</fullName>
    <formula>Dealer_Fee_Price_Match_Amount__c / Opportunity_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Fee Price Match %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>