unpackaged/main/default/objects/Commission__c/fields/Dealer_Fee_Price_Match_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Fee_Price_Match_Reduction__c</fullName>
    <formula>IF( Commission_Plan__r.Dealer_Fee_Price_Match_Active__c = True, Dealer_Fee_Price_Match_Amount__c - Opportunity__r.Dealer_Fees_CP__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Fee Price Match Reduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>