unpackaged/main/default/objects/Commission__c/fields/Dealer_Fee_Price_Match_Reduction_Value__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Fee_Price_Match_Reduction_Value__c</fullName>
    <label>Dealer Fee Price Match Reduction Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>