unpackaged/main/default/objects/Commission__c/fields/Dealer_Fees__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Fees__c</fullName>
    <formula>IF(Opportunity__r.Contract_Received_Date__c &gt;= Date(2020,11,1),
Opportunity__r.Commissions_Dealer_Fee_Amount__c,
Opportunity__r.Dealer_Fees_CP__c + Dealer_Fee_Price_Match_Reduction_Value__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>