unpackaged/main/default/objects/Commission__c/fields/Div_Dealer_Value__c.field-meta.xml
<CustomField>
    <fullName>Div_Dealer_Value__c</fullName>
    <formula>IF(Dividend_Dealer_Fees__c &gt; 0, Dividend_Dealer_Fees__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Div Dealer Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>