unpackaged/main/default/objects/Commission__c/fields/Dividend_Dealer_Fees__c.field-meta.xml
<CustomField>
    <fullName>Dividend_Dealer_Fees__c</fullName>
    <formula>Case(  Opportunity__r.Financing_Tool__c , 

"Dividend Loan", 
      0.11 *  Opportunity__r.Amount ,

0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dividend Dealer Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>