unpackaged/main/default/objects/Commission__c/fields/Dividend_Dealer_Value__c.field-meta.xml
<CustomField>
    <fullName>Dividend_Dealer_Value__c</fullName>
    <label>Dividend Dealer Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>