unpackaged/main/default/objects/Commission__c/fields/Dividend_Energy_Efficiency_Adder__c.field-meta.xml
<CustomField>
    <fullName>Dividend_Energy_Efficiency_Adder__c</fullName>
    <formula>IF(  Opportunity__r.Dividend_Energy_Efficiency_Option__c  = True, Case(  Opportunity__r.Financing_Tool__c  , "Dividend Loan", 375,0), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dividend Energy Efficiency Adder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>