unpackaged/main/default/objects/Commission__c/fields/DS_M2_Amount__c.field-meta.xml
<CustomField>
    <fullName>DS_M2_Amount__c</fullName>
    <formula>CASE( Lead_Source_Type__c , "Corporate", Opportunity_Amount__c *  Commission_Plan__r.Energy_Specialist_Corporate__c  *  Commission_Plan__r.Milestone_2_Percent__c ,

"Self-Generated",  Opportunity_Amount__c *   Commission_Plan__r.Energy_Specialist_Self_Gen__c  *  Commission_Plan__r.Milestone_2_Percent__c ,

0)</formula>
    <label>DS M2 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>