unpackaged/main/default/objects/Commission__c/fields/Dvinci_Panel_Type_Adder__c.field-meta.xml
<CustomField>
    <fullName>Dvinci_Panel_Type_Adder__c</fullName>
    <formula>Case( Opportunity__r.Panel_Type__c ,  

"LG 320 Black/Black", 300 * Opportunity__r.System_Size_Calculated_kW__c, 

"LG335N1C-A5", 300 * Opportunity__r.System_Size_Calculated_kW__c, 

"LG 335W", 300 * Opportunity__r.System_Size_Calculated_kW__c, 


0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dvinci Panel Type Adder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>