unpackaged/main/default/objects/Commission__c/fields/Electrical_Upgrade_Adder__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Upgrade_Adder__c</fullName>
    <formula>Opportunity__r.Electrical_Upgrade_Adder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Electrical Upgrade Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>