unpackaged/main/default/objects/Commission__c/fields/Final_Commission_True_Up__c.field-meta.xml
<CustomField>
    <fullName>Final_Commission_True_Up__c</fullName>
    <formula>IF(Milestone_3_Paid__c=True,Milestone_3_Amount__c-Milestone_3_Actual_Paid__c,0)</formula>
    <label>Final Commission True-Up</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>