unpackaged/main/default/objects/Commission__c/fields/Ground_Mount_Adder__c.field-meta.xml
<CustomField>
    <fullName>Ground_Mount_Adder__c</fullName>
    <formula>CASE (  Opportunity__r.Roof_Type__c , "Ground Mount", 

IF( Contract_Received_Confirmed_Date__c &gt; Date(2019,06,01),

IF ( Opportunity__r.System_Size_Calculated_kW__c &gt; 15,400,

IF( Opportunity__r.System_Size_Calculated_kW__c &gt; 7,500,

900) ),


350 )

 , 0)

* Opportunity__r.System_Size_Calculated_kW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ground Mount Adder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>