unpackaged/main/default/objects/Commission__c/fields/Harbor_Total_Adders__c.field-meta.xml
<CustomField>
    <fullName>Harbor_Total_Adders__c</fullName>
    <formula>Battery_Adder_Value__c +    Panel_Type_Adder__c +   Roof_Type_Adder__c +  Trenching_Distance_Adder__c +  Solar_Edge_Warranty_Adder__c +  Ground_Mount_Adder__c  + Main_Service_Panel_Upgrade_Adder__c +  Palmetto_Home_Adder__c +  Appointment_Success_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Harbor Total Adders</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>