unpackaged/main/default/objects/Commission__c/fields/Harbor_Total_Adders_Value__c.field-meta.xml
<CustomField>
    <fullName>Harbor_Total_Adders_Value__c</fullName>
    <label>Harbor Total Adders Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>