unpackaged/main/default/objects/Commission__c/fields/IA_Base_Fee__c.field-meta.xml
<CustomField>
    <fullName>IA_Base_Fee__c</fullName>
    <formula>Commission_Plan__r.Base_6kW__c *  Opportunity__r.System_Size_Calculated_kW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IA - Base Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>