unpackaged/main/default/objects/Commission__c/fields/IA_Finance_Fee__c.field-meta.xml
<CustomField>
    <fullName>IA_Finance_Fee__c</fullName>
    <formula>Case( Opportunity__r.Financing_Tool__c , "Cash", 0,

Opportunity__r.Price_Per_Watt__c * 0.13)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IA - Finance Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>