unpackaged/main/default/objects/Commission__c/fields/IA_High_Roof_Adder__c.field-meta.xml
<CustomField>
    <fullName>IA_High_Roof_Adder__c</fullName>
    <formula>IF( Opportunity__r.Number_of_Stories__c &gt; 2, 50* Opportunity__r.System_Size_Calculated_kW__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IA -High Roof Adder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>