unpackaged/main/default/objects/Commission__c/fields/IA_M1_Amount__c.field-meta.xml
<CustomField>
    <fullName>IA_M1_Amount__c</fullName>
    <formula>CASE( Loan_Pal__c , "Loan Pal", 0, 

CASE( Lead_Source_Type__c , 
"Independent", IA_Total_Commissions_Value__c * Commission_Plan__r.Milestone_1_Percent__c  , 

0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IA - M1 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>