unpackaged/main/default/objects/Commission__c/fields/IA_M1_Amount_Value__c.field-meta.xml
<CustomField>
    <fullName>IA_M1_Amount_Value__c</fullName>
    <label>IA - M1 Amount Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>