unpackaged/main/default/objects/Commission__c/fields/IA_M1_Paid__c.field-meta.xml
<CustomField>
    <fullName>IA_M1_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IA - M1 Paid</label>
    <type>Checkbox</type>
</CustomField>