unpackaged/main/default/objects/Commission__c/fields/IA_M3_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>IA_M3_Paid_Date__c</fullName>
    <label>IA - M3 Paid Date</label>
    <type>Date</type>
</CustomField>