unpackaged/main/default/objects/Commission__c/fields/IA_Panel_Adder__c.field-meta.xml
<CustomField>
    <fullName>IA_Panel_Adder__c</fullName>
    <formula>CASE ( Opportunity__r.Module_Type__c, "LG", 350 *  Opportunity__r.System_Size_Calculated_kW__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IA - Panel Adder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>