unpackaged/main/default/objects/Commission__c/fields/IA_Roof_Tilt_Adder__c.field-meta.xml
<CustomField>
    <fullName>IA_Roof_Tilt_Adder__c</fullName>
    <formula>IF( Opportunity__r.Array_Tilt_Highest__c &gt; 36, 50* Opportunity__r.System_Size_Calculated_kW__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IA - Roof Tilt Adder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>