unpackaged/main/default/objects/Commission__c/fields/IA_Roof_Type_Adder__c.field-meta.xml
<CustomField>
    <fullName>IA_Roof_Type_Adder__c</fullName>
    <formula>CASE( Opportunity__r.Roof_Type__c , "Corrugated_Metal" , 100 * Opportunity__r.System_Size_Calculated_kW__c ,"Concrete", 100 * Opportunity__r.System_Size_Calculated_kW__c ,"Tile", 100 * Opportunity__r.System_Size_Calculated_kW__c ,"Flat Roof", 100 * Opportunity__r.System_Size_Calculated_kW__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IA - Roof Type Adder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>