unpackaged/main/default/objects/Commission__c/fields/IA_Total_Adders__c.field-meta.xml
<CustomField>
    <fullName>IA_Total_Adders__c</fullName>
    <formula>Ground_Mount_Adder__c +  IA_High_Roof_Adder__c +  IA_Panel_Adder__c +  IA_Roof_Tilt_Adder__c +  IA_Roof_Type_Adder__c +  IA_Trenching_Distance_Adder__c +  Solar_Edge_Warranty_Adder__c + Palmetto_Home_Adder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IA -Total Adders</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>