unpackaged/main/default/objects/Commission__c/fields/IA_Total_Commisions__c.field-meta.xml
<CustomField>
    <fullName>IA_Total_Commisions__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IA - Total Commisions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>