unpackaged/main/default/objects/Commission__c/fields/IA_Total_Commissions_Value__c.field-meta.xml
<CustomField>
    <fullName>IA_Total_Commissions_Value__c</fullName>
    <label>IA - Total Commissions Value</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>