unpackaged/main/default/objects/Commission__c/fields/IA_Trenching_Distance_Adder__c.field-meta.xml
<CustomField>
    <fullName>IA_Trenching_Distance_Adder__c</fullName>
    <formula>Opportunity__r.Trenching_Distance__c *15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IA - Trenching Distance Adder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>