unpackaged/main/default/objects/Commission__c/fields/Install_Completion_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Install_Completion_Approved_Date__c</fullName>
    <formula>Opportunity__r.IC_Approved_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Install Completion Approved Date</label>
    <type>Date</type>
</CustomField>