unpackaged/main/default/objects/Commission__c/fields/Installation_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Installation_Complete_Date__c</fullName>
    <formula>Opportunity__r.Installation_Complete_Date__c</formula>
    <label>Installation Complete Date</label>
    <type>Date</type>
</CustomField>