unpackaged/main/default/objects/Commission__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <formula>TEXT( Opportunity__r.LeadSource )</formula>
    <label>Lead Source</label>
    <type>Text</type>
</CustomField>