unpackaged/main/default/objects/Commission__c/fields/Lead_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Type__c</fullName>
    <formula>TEXT(Opportunity__r.Lead_Source_Type__c)</formula>
    <label>Lead Source Type</label>
    <type>Text</type>
</CustomField>