unpackaged/main/default/objects/Commission__c/fields/Loan_Pal__c.field-meta.xml
<CustomField>
    <fullName>Loan_Pal__c</fullName>
    <formula>Text(Opportunity__r.Financing_Tool__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance Tool</label>
    <type>Text</type>
</CustomField>