unpackaged/main/default/objects/Commission__c/fields/Loan_Pal_Dealer_Fees__c.field-meta.xml
<CustomField>
    <fullName>Loan_Pal_Dealer_Fees__c</fullName>
    <formula>Case( Opportunity__r.Financing_Tool__c , "Loanpal",


CASE ( Opportunity__r.Loan_Term__c, "10", 0.215 * Opportunity__r.Amount,
"12", 0.215 * Opportunity__r.Amount,
"15", 0.215 * Opportunity__r.Amount,
"20", 0.215 * Opportunity__r.Amount,
0),

0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Pal Dealer Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>